Bug 2050417 - Center align terms of service on VPN get started view - r=ip-protection-reviewers,kpatenio
Differential Revision: https://phabricator.services.mozilla.com/D309395

UltraBlame original commit: 1ec4bb9e18383e039bb749be7f7a2b417da40cdc

--- a/browser/components/ipprotection/content/ipprotection-content.css
+++ b/browser/components/ipprotection/content/ipprotection-content.css
@@ -168,6 +168,7 @@ hr {
   margin-block-start: var(--space-medium);
   margin-block-end: var(--space-medium);
   color: var(--text-color-deemphasized);
+  text-align: center;
 }
 
 ipprotection-message-bar.vpn-top-content {
